--- a/LibraryMangment.Application/LibraryMangment.Application.csproj
+++ b/LibraryMangment.Application/LibraryMangment.Application.csproj
@@ -15,4 +15,8 @@
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\LibraryManagment.Domain\LibraryManagment.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
